--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Gods glory</title>
 </head>
 <body>
-	<h1>Gods glory</h1>
+	<h1>  When people ask us what we do at God's Glory Green Farms Fields and Cooperative, we don’t just say, “We farm.” We say, “We grow possibility.”
+
+We are a small team of passionate, purpose-driven individuals who believe that cassava, maize, vegetables, and poultry can do more than fill plates—they can change lives. Every seed we plant is a quiet act of faith in some thing bigger: that with the right care, the right support, and the right heart, small things grow into something great.
+
+At God's Glory Green Farms, we don’t claim to be the biggest or the most advanced—not yet. But what we do have is vision, discipline, and a commitment to do things the right way: with integrity, sustainability, and community in mind.
+
+We’re not just farming for today—we’re building a future where families eat better, where the land is respected, and where young minds are inspired to return to the soil—not out of necessity, but out of hope, pride, and a desire to grow something that matters.  </h1>
 </body>
 </html>
